# xwinmosaic

./: .gitattributes  CMakeLists.txt  LICENSE  README.md  xwinmosaic.1
contrib/: CMakeLists.txt  xwinmosaic_open_ebuf  xwinmosaic_select_ebuf
contrib/archlinux/: PKGBUILD
contrib/emacs-fancy/: mosaic.el  xwmos_ebuf_select
contrib/gentoo/: xwinmosaic-9999.ebuild
debian/: changelog  control  copyright  rules
src/: CMakeLists.txt  main.c  mosaic_box.c  mosaic_box.h  mosaic_search_box.c  mosaic_search_box.h  mosaic_window_box.c  mosaic_window_box.h  win32_interaction.c  win32_interaction.h  window_box.c  window_box.h  x_interaction.c  x_interaction.h
support/: CMakeLists.txt  select-emacs-buffer  xwinmosaic_open_ebuf  xwinmosaic_run  xwinmosaic_select_ebuf
support/archlinux/: PKGBUILD
support/gentoo/: xwinmosaic-9999.ebuild
